--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 aiofiles
 bard
+SpeechRecognition
 pornhub-api==0.2.0
-aiohttp==3.9.1
-asyncio==3.4.3
+aiohttp 
+asyncio 
 beautifulsoup4
 daxxhub
 deepai
@@ -16,7 +17,8 @@ pydub
 pycountry
 heroku3
 apscheduler
-motor==3.3.2
+motor 
+numpy
 pillow==9.5.0
 psutil
 wget
@@ -38,16 +40,18 @@ spotipy
 tgcrypto
 telegraph
 unidecode
-yt-dlp==2023.12.30
+yt-dlp
 youtube-search
 youtube-search-python
 gtts
 git+https://github.com/AsmSafone/SafoneAPI
-lexica-api==1.4.7
+lexica-api==1.5.1
 httpx==0.25.2
 gpytranslate
 openai==0.28.0
-img2pdf
 pickledb
 python-telegram-bot==20.7
 img2pdf
+cloudscraper
+pycryptodome
+opencv-python
